--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ts-loader": "^8.0.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
+    "uuid": "^8.3.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.8",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.3.0",
     "npm-run-all": "^4.1.5",
     "ts-node-dev": "^1.0.0-pre.62"
   }
